--- a/roles/mongod/templates/consul-template.conf
+++ b/roles/mongod/templates/consul-template.conf
@@ -1,5 +1,5 @@
 template {
 	source = "{{ etc_conf }}/consul-template/ctmpl/mongod.ctmpl"
 	destination = "{{ etc_conf }}/mongod.conf"
-	command = "/etc/init.d/mongod{{ init_suffix }} restart"
+	command = "/sbin/service mongod{{ init_suffix }} restart"
 }
