--- a/dbservers.yml
+++ b/dbservers.yml
@@ -10,7 +10,7 @@
 
   post_tasks:
     - name: refresh consul
-      shell: 'kill -1 $(cat {{ pid_path }}/consul.pid)'
+      service: name=consul{{ init_suffix }} state=reloaded
 
     - name: refresh consul-template
-      shell: 'kill -1 $(cat {{ pid_path }}/consul-template.pid)'
+      service: name=consul-template{{ init_suffix }} state=reloaded
