--- a/roles/elasticsearch/templates/consul-template.conf
+++ b/roles/elasticsearch/templates/consul-template.conf
@@ -1,12 +1,12 @@
 template {
 	source = "{{ etc_conf }}/consul-template/ctmpl/elasticsearch.ctmpl"
 	destination = "{{ inf_app_path }}/elasticsearch/current/config/elasticsearch.yml"
-	command = "/etc/init.d/elasticsearch{{ init_suffix }} restart"
+	command = "/sbin/service elasticsearch{{ init_suffix }} restart"
 }
 
 
 template {
         source = "{{ etc_conf }}/consul-template/ctmpl/elasticsearch.json.ctmpl"
         destination = "{{ etc_conf }}/consul.d/elasticsearch.json"
-        command = "kill -1 $(cat {{ pid_path }}/consul.pid)"
+        command = "/sbin/service consul{{ init_suffix }} reload"
 }
