--- a/roles/logstash-forwarder/tasks/main.yml
+++ b/roles/logstash-forwarder/tasks/main.yml
@@ -1,20 +1,24 @@
 ---
-- hosts: application
-  vars:
-  sudo: yes
-
-  tasks:
-  - name: Create bin dir
-    file: path=/usr/nano/go/bin mode=755 state=directory
+  - name: Create application dir
+    file: path={{ item }} mode=755 state=directory
+    with_items:
+      - "{{ inf_app_path }}/logstash-forwarder"
+      - "{{ etc_conf }}/logstash-forwarder/conf.d"
 
   - name: Install Logstash Forwarder
-    copy: src=/usr/nano/build/go/bin/logstash-forwarder mode=744 dest=/usr/nano/bin/logstash-forwarder
-
-  - name: Install Logstash Shell Script
-    copy: src=/usr/nano/build/go/bin/logstash-forwarder.sh mode=744 dest=/usr/nano/bin/logstash-forwarder.sh
+    copy: src=/usr/nano/build/{{ ansible_environment }}/logstash-forwarder/logstash-forwarder mode=744 dest={{ inf_app_path }}/logstash-forwarder/logstash-forwarder
 
   - name: Install Certificate
-    copy: src=files/ssl/certs/logstash-forwarder.crt mode=400 dest=/etc/ssl/certs/logstash-forwarder.crt
+    copy: src=logstash-forwarder-{{ ansible_environment }}.crt mode=644 dest=/etc/ssl/certs/logstash-forwarder-{{ ansible_environment }}.crt
 
-  - name: Install Configuration File
-    template: src=templates/logstash-forwarder.conf mode=644 dest=/etc/logstash-forwarder.conf
+  - name: Install logstash-forwarder ctmpl file
+    template: src=logstash-forwarder.ctmpl mode=644 dest={{ etc_conf }}/consul-template/ctmpl/logstash-forwarder.ctmpl
+
+  - name: Install consul-template configuration file
+    template: src=consul-template.conf mode=644 dest={{ etc_conf }}/consul-template/conf.d/logstash-forwarder
+
+  - name: Install init.d script
+    template: src=logstash-forwarder.init.d mode=744 dest=/etc/init.d/logstash-forwarder{{ init_suffix }}
+    notify:
+      - install logstash-forwarder
+      - restart logtash-forwarder
