--- a/roles/logstash/templates/consul-template.input.conf
+++ b/roles/logstash/templates/consul-template.input.conf
@@ -1,5 +1,5 @@
 template {
 	source = "{{ etc_conf }}/consul-template/ctmpl/01-lumberjack-input.ctmpl"
 	destination = "{{ etc_conf }}/logstash/conf.d/01-lumberjack-input.conf"
-	command = "/etc/init.d/logstash{{ init_suffix }} restart"
+	command = "/sbin/service logstash{{ init_suffix }} restart"
 }
