--- a/roles/logstash/templates/consul-template.output.conf
+++ b/roles/logstash/templates/consul-template.output.conf
@@ -1,5 +1,5 @@
 template {
 	source = "{{ etc_conf }}/consul-template/ctmpl/90-lumberjack-output.ctmpl"
 	destination = "{{ etc_conf }}/logstash/conf.d/90-lumberjack-output.conf"
-	command = "/etc/init.d/logstash{{ init_suffix }} restart"
+	command = "/sbin/service logstash{{ init_suffix }} restart"
 }
