--- a/roles/mongod/tasks/main.yml
+++ b/roles/mongod/tasks/main.yml
@@ -59,8 +59,13 @@
   - name: Add file consul service config
     template: src=mongod.json dest={{ etc_conf }}/consul.d/mongod.json mode=744
 
-  - name: Install mongo init script
+  - name: Copy mongod init script
     template: src=mongod.init.d mode=744 dest=/etc/init.d/mongod
-    notify:
-      - install mongod
-      - restart mongod
+
+  - name: Install mongod
+    command: /sbin/insserv -f mongod
+
+  - name: Refresh consul-template
+    service: name=consul-template state=reloaded
+
+  - include: replset.yml
