--- a/roles/apache/handlers/main.yml
+++ b/roles/apache/handlers/main.yml
@@ -1,7 +1,10 @@
 ---
 # file: roles/apache/handlers/main.yml
 - name: install apche
-  command: /sbin/insserv -f apache2{{ init_suffix }}
+  command: /sbin/insserv -f apache2
 
 - name: restart apache
-  service: name=apache2{{ init_suffix }} state=restarted
+  service: name=apache2 state=restarted
+
+- name: refersh consul
+  service: name=consul state=reloaded
