--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -7,5 +7,6 @@
       - "{{ lock_path }}"
       - "{{ lock_path }}/subsys"
       - "{{ inf_app_path }}"
+      - "{{ inf_app_path }}/lib"
       - "{{ inf_log_path }}"
       - "{{ inf_data_path }}"
