--- a/roles/consul-template/handlers/main.yml
+++ b/roles/consul-template/handlers/main.yml
@@ -1,10 +1,10 @@
 ---
 # file: roles/consul-template/handlers/main.yml
 - name: install consultemplate
-  command: /sbin/insserv -f consul-template{{ init_suffix }}
+  command: /sbin/insserv -f consul-template
 
 - name: restart consultemplate
-  service: name=consul-template{{ init_suffix }} state=restarted
+  service: name=consul-template state=restarted
 
 - name: refresh consultemplate
-  service: name=consul-template{{ init_suffix }} state=reloaded
+  service: name=consul-template state=reloaded
