--- a/roles/consul/templates/consulagent.conf
+++ b/roles/consul/templates/consulagent.conf
@@ -5,7 +5,7 @@
     "server": false,
     "rejoin_after_leave": true,
     "enable_syslog": false,
-    "data_dir": "{{ consul_data_dir }}",
+    "data_dir": "{{ consul_data_dir }}/consul",
     "log_level": "{{ consul_log_lvl }}",
     "datacenter": "aeb{{ ansible_environment }}",
     "ports": {
