--- a/webservers.yml
+++ b/webservers.yml
@@ -12,8 +12,8 @@
   roles:
     - role: common
     - role: apache
-    - role: consului
-    - role: kibana
+#    - role: consului
+#    - role: kibana
 
   post_tasks:
     - name: refresh consul
