--- a/roles/tomcat/templates/catalina.properties
+++ b/roles/tomcat/templates/catalina.properties
@@ -137,7 +137,6 @@ tomcat.util.buf.StringCache.byte.enabled=true
 #JDBC Passwords
 
 #Adding Environment Variable for AEB(Harsha)
-server.env={{ ansible_environment }}
-db.env={{ database_environment }}
-documentum.env={{ ansible_environment }}
+tomcatport={{ tcat_port }}
+ldapSyncFlag=Y
 #End of Variable Settings
