--- a/roles/tomcat/templates/tcat-env.conf
+++ b/roles/tomcat/templates/tcat-env.conf
@@ -2,4 +2,7 @@ TOMCAT_USER="{{ tomcat_user }}"
 CATALINA_HOME="{{ tcat_home }}"
 CATALINA_BASE="{{ tcat_base }}"
 JAVA_HOME="{{ java_home }}"
-JAVA_OPTS="-Dspring.profiles.active=production -Xmx2048m -XX:MaxPermSize=512m -XX:+CMSClassUnloadingEnabled -XX:+UseConcMarkSweepGC -Djava.endorsed.dirs={{ tcat_home }}/endorsed -Dcom.sun.management.jmxremote -XX:+HeapDumpOnOutOfMemoryError -Djava.awt.headless=true -Dtcat.service={{ tcat_cluster_name }} -Dcatalina.home={{ tcat_home }} -Dcatalina.base={{ tcat_base }} -Dtcat.data={{ tcat_base }}/tcat-data -agentpath:{{ dynatrace_agent }}/libdtagent.so=name=Tomcat_{{ hostvars[inventory_hostname]['ansible_nodename'] }}_{{ tcat_cluster_name }},server={{ dynatrace_url }}"
+SERVICE_NAME="{{ tcat_cluster_name }}
+JAVA_OPTS="-Dspring.profiles.active=production -Xmx2048m -XX:MaxPermSize=512m -XX:+CMSClassUnloadingEnabled -XX:+UseConcMarkSweepGC -Djava.endorsed.dirs={{ tcat_home }}/endorsed -Dcom.sun.management.jmxremote -XX:+HeapDumpOnOutOfMemoryError -Djava.awt.headless=true -Dtcat.service={{ tcat_cluster_name }} -Dcatalina.home={{ tcat_home }} -Dcatalina.base={{ tcat_base }} -Dtcat.data={{ tcat_base }}/tcat-data
+
+#JAVA_OPTS="-Dspring.profiles.active=production -Xmx2048m -XX:MaxPermSize=512m -XX:+CMSClassUnloadingEnabled -XX:+UseConcMarkSweepGC -Djava.endorsed.dirs={{ tcat_home }}/endorsed -Dcom.sun.management.jmxremote -XX:+HeapDumpOnOutOfMemoryError -Djava.awt.headless=true -Dtcat.service={{ tcat_cluster_name }} -Dcatalina.home={{ tcat_home }} -Dcatalina.base={{ tcat_base }} -Dtcat.data={{ tcat_base }}/tcat-data -agentpath:{{ dynatrace_agent }}/libdtagent.so=name=Tomcat_{{ hostvars[inventory_hostname]['ansible_nodename'] }}_{{ tcat_cluster_name }},server={{ dynatrace_url }}"
